# Blockchain_project

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  hardhat.config.js  package-lock.json  package.json  pyproject.toml
contracts/: PharmaTrack.sol
docs/: architecture.md  runbook.md  whitepaper.md
frontend/: app.js  index.html  serve.js  style.css
scripts/: deploy.js
src/: app.py
src/api/: routes.py  schemas.py
src/blockchain/: __init__.py  crypto.py  ledger.py  models.py
src/scripts/: iot_simulator.py  test_api.py
test/: PharmaTrack.test.js
